[package]
name = "sniper"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.26.3"
crossterm = "0.27.0"
tokio-util = "0.7.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["full"] }
solana-client = "1.17"
solana-sdk = "1.17"
solana-program = "1.17"
async_println = "1.1.6"
parking_lot = "0.12"
futures = "0.3"
base64 = "0.21"
bs58 = "0.5"
byteorder = "1.5"
hex = "0.4"
spl-associated-token-account = "2.3"
spl-token = "4.0"
futures-util = "0.3"
tui = "0.19.0"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
url = "2.4"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
bincode = "1.3"

[[bin]]
name = "sniper"
path = "sniper.rs"